Commit before adding User Controller

--- a/MyERPSolutions/MyERPSolutions.PrideTek.Services/MyERPSolutions.PrideTek.Services.csproj
+++ b/MyERPSolutions/MyERPSolutions.PrideTek.Services/MyERPSolutions.PrideTek.Services.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyERPSolutions.PrideTek.Dao\MyERPSolutions.PrideTek.Dao.csproj" />
+    <ProjectReference Include="..\MyERPSolutions.PrideTek.Models\MyERPSolutions.PrideTek.Models.csproj" />
+  </ItemGroup>
+
 </Project>
